--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey=Gotek12_ebiznes
-sonar.organization=gotek12
+sonar.projectKey=LukaszLik_ebiz-sklep-back
+sonar.organization=lukaszlik
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=ebiznes
+#sonar.projectName=ebiz-sklep-back
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
