--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -2,7 +2,7 @@ name: Build
 on:
   push:
     branches:
-      - lab7
+      - main
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
