add frontend cloud addresses

--- a/conf/silhouette.conf
+++ b/conf/silhouette.conf
@@ -25,15 +25,18 @@ silhouette {
       # Google provider
       google.authorizationURL="https://accounts.google.com/o/oauth2/auth"
       google.accessTokenURL="https://oauth2.googleapis.com/token"
-      google.redirectURL="http://localhost:9000/authenticate/google"
-      google.clientID="751499509807-snm22dtvleo4kj0fuqh6md18klp43knm.apps.googleusercontent.com"
-      google.clientSecret="XR2uzdLfU0HewbTBnO3r6DZu"
+      google.redirectURL="https://test2-324913.appspot.com/authenticate/google"
+      google.clientID="261379775364-i53um30b7u4c3johjbd0j362vaipim14.apps.googleusercontent.com"
+      google.clientSecret="zDqtJJriGAyhmXmAfUFDacnF"
+#       google.clientID="751499509807-snm22dtvleo4kj0fuqh6md18klp43knm.apps.googleusercontent.com"
+#       google.clientSecret="XR2uzdLfU0HewbTBnO3r6DZu"
       google.scope="profile email"
 
      # Github provider
      github.authorizationURL="https://github.com/login/oauth/authorize"
      github.accessTokenURL="https://github.com/login/oauth/access_token"
-      github.redirectURL="http://localhost:9000/authenticate/github"
+      github.redirectURL="https://test2-324913.appspot.com/authenticate/github"
+#       local host:9000
       github.clientID="0c1c05eaa2ffe4ed76bc"
      github.clientSecret="60872af4941ffb50db5a87aa0b6770a90e514a32"
      github.scope="profile email"
