add frontend cloud addresses

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -28,7 +28,7 @@ play.filters.hosts {
 play.filters {
  cors {
     pathPrefixes = ["/"]
-    allowedOrigins = ["http://localhost:9000", "http://localhost:3000", "https://test2-324913.appspot.com/"]
+    allowedOrigins = ["http://localhost:9000", "http://localhost:3000", "https://test2-324913.appspot.com"]
     allowedHttpMethods = null
     preflightMaxAge = 1 hour
  }
