--- a/conf/silhouette.conf
+++ b/conf/silhouette.conf
@@ -25,7 +25,7 @@ silhouette {
       # Google provider
       google.authorizationURL="https://accounts.google.com/o/oauth2/auth"
       google.accessTokenURL="https://oauth2.googleapis.com/token"
-      google.redirectURL="https://test2-324913.appspot.com/authenticate/google"
+      google.redirectURL="https://sklep-back2.azurewebsites.net/authenticate/google"
       google.clientID="261379775364-i53um30b7u4c3johjbd0j362vaipim14.apps.googleusercontent.com"
       google.clientSecret="zDqtJJriGAyhmXmAfUFDacnF"
 #       google.clientID="751499509807-snm22dtvleo4kj0fuqh6md18klp43knm.apps.googleusercontent.com"
@@ -35,7 +35,7 @@ silhouette {
      # Github provider
      github.authorizationURL="https://github.com/login/oauth/authorize"
      github.accessTokenURL="https://github.com/login/oauth/access_token"
-      github.redirectURL="https://test2-324913.appspot.com/authenticate/github"
+      github.redirectURL="https://sklep-back2.azurewebsites.net/authenticate/github"
 #       local host:9000
       github.clientID="0c1c05eaa2ffe4ed76bc"
      github.clientSecret="60872af4941ffb50db5a87aa0b6770a90e514a32"
