--- a/conf/application.conf
+++ b/conf/application.conf
@@ -21,7 +21,7 @@ play.i18n {
 
 play.filters.hosts {
  # Allow requests to
-    allowed = [".azurewebsites.net", "localhost:9000", "localhost:5000", "test2-324913.appspot.com", "sklep-back2.azurewebsites.net"]
+    allowed = [".azurewebsites.net", "localhost:9000", "localhost:5000", "test2-324913.appspot.com", "sklep-back2.azurewebsites.net", "localhost:3000"]
 }
 
 ## Filter Configuration
