--- a/conf/application.conf
+++ b/conf/application.conf
@@ -21,14 +21,14 @@ play.i18n {
 
 play.filters.hosts {
  # Allow requests to
-    allowed = [".azurewebsites.net", "localhost:9000", "localhost:5000", "test2-324913.appspot.com", "sklep-back2.azurewebsites.net", "localhost:3000"]
+    allowed = [".azurewebsites.net", "test2-324913.appspot.com", "sklep-back2.azurewebsites.net"]
 }
 
 ## Filter Configuration
 play.filters {
  cors {
     pathPrefixes = ["/"]
-    allowedOrigins = ["http://localhost:9000", "http://localhost:5000","http://localhost:3000", "https://test2-324913.appspot.com", "https://sklep-back2.azurewebsites.net"]
+    allowedOrigins = ["https://test2-324913.appspot.com", "https://sklep-back2.azurewebsites.net"]
     allowedHttpMethods = null
     preflightMaxAge = 1 hour
  }
